package src;
interface MaterialDidatico {
    void acessar();
}